crates/pg_syntax/tests/snapshots/postgres_regress/float8@100.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ln(f.f1) from FLOAT8_TBL f where f.f1 = '0.0';"
---
SelectStmt@0..53
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..9 "ln"
      Ascii40@9..10 "("
      ColumnRef@10..14
        Ident@10..11 "f"
        Ascii46@11..12 "."
        Ident@12..14 "f1"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "from"
  Whitespace@20..21 " "
  RangeVar@21..33
    Ident@21..31 "FLOAT8_TBL"
    Whitespace@31..32 " "
    Alias@32..33
      Ident@32..33 "f"
  Whitespace@33..34 " "
  Where@34..39 "where"
  Whitespace@39..40 " "
  AExpr@40..52
    ColumnRef@40..44
      Ident@40..41 "f"
      Ascii46@41..42 "."
      Ident@42..44 "f1"
    Whitespace@44..45 " "
    Ascii61@45..46 "="
    Whitespace@46..47 " "
    AConst@47..52
      Sconst@47..52 "'0.0'"
  Ascii59@52..53 ";"

