crates/pg_syntax/tests/snapshots/postgres_regress/float8@102.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT exp(f.f1) from FLOAT8_TBL f;
---
SelectStmt@0..35
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..15
    FuncCall@7..15
      Ident@7..10 "exp"
      Ascii40@10..11 "("
      ColumnRef@11..15
        Ident@11..12 "f"
        Ascii46@12..13 "."
        Ident@13..15 "f1"
  Ascii41@15..16 ")"
  Whitespace@16..17 " "
  From@17..21 "from"
  Whitespace@21..22 " "
  RangeVar@22..34
    Ident@22..32 "FLOAT8_TBL"
    Whitespace@32..33 " "
    Alias@33..34
      Ident@33..34 "f"
  Ascii59@34..35 ";"

