crates/pg_syntax/tests/snapshots/postgres_regress/float8@103.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT f.f1 / '0.0' from FLOAT8_TBL f;"
---
SelectStmt@0..38
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..19
    AExpr@7..19
      ColumnRef@7..11
        Ident@7..8 "f"
        Ascii46@8..9 "."
        Ident@9..11 "f1"
      Whitespace@11..12 " "
      Ascii47@12..13 "/"
      Whitespace@13..14 " "
      AConst@14..19
        Sconst@14..19 "'0.0'"
  Whitespace@19..20 " "
  From@20..24 "from"
  Whitespace@24..25 " "
  RangeVar@25..37
    Ident@25..35 "FLOAT8_TBL"
    Whitespace@35..36 " "
    Alias@36..37
      Ident@36..37 "f"
  Ascii59@37..38 ";"

